--- a/GameTeam/wwwroot/css/profile.css
+++ b/GameTeam/wwwroot/css/profile.css
@@ -119,7 +119,16 @@ header {
 
 .auth-status {
     color: #666;
+    text-decoration: none;
 }
+
+.auth-status:hover {
+    color: #2563EB;
+    text-decoration: none;
+}
+
+
+
 
 .profile-container {
     width: 800px;
