--- a/GameTeam/wwwroot/css/questionnaires.css
+++ b/GameTeam/wwwroot/css/questionnaires.css
@@ -39,7 +39,7 @@ body {
     font-family: "Poppins", sans-serif;
     font-weight: bold;
     color: #2563EB;
-    margin: 20px auto;
+    margin: 25px auto;
     position: sticky;
     top: 0;
     background-color: #EFF4FF;
@@ -92,9 +92,9 @@ body {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px 40px;
+    padding: 20px 40px;
     border-bottom: 1px solid #eee;
     background-color: white;
     width: 100%;
@@ -104,6 +104,7 @@ header {
 .auth-wrapper {
     display: flex;
     align-items: center;
+    margin-left: 20px;
 }
 
 .header-profile-image {
