--- a/GameTeam/wwwroot/css/register.css
+++ b/GameTeam/wwwroot/css/register.css
@@ -39,7 +39,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   color: #2563EB;
-  margin: 20px auto;
+  margin: 25px auto;
   position: sticky;
   top: 0;
   background-color: #EFF4FF;
@@ -99,6 +99,7 @@ header {
   background-color: white;
   width: 100%;
   flex-shrink: 0;
+  height: 95px;
 }
 
 .auth-wrapper {
