--- a/GameTeam/wwwroot/css/questionnaires.css
+++ b/GameTeam/wwwroot/css/questionnaires.css
@@ -39,7 +39,7 @@ body {
     font-family: "Poppins", sans-serif;
     font-weight: bold;
     color: #2563EB;
-    margin: 25px auto;
+    margin: 20px auto;
     position: sticky;
     top: 0;
     background-color: #EFF4FF;
@@ -88,17 +88,25 @@ body {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    margin-top: 90px;
+    height: calc(100vh - 90px);
+    padding-bottom: 20px;
 }
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    padding: 20px 40px;
+    padding: 30px 40px;
     border-bottom: 1px solid #eee;
     background-color: white;
-    width: 100%;
-    flex-shrink: 0;
+    width: calc(100% - 270px);
+    height: 90px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    box-sizing: border-box;
 }
 
 .auth-wrapper {
