--- a/GameTeam/wwwroot/css/register.css
+++ b/GameTeam/wwwroot/css/register.css
@@ -39,7 +39,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   color: #2563EB;
-  margin: 25px auto;
+  margin: 20px auto;
   position: sticky;
   top: 0;
   background-color: #EFF4FF;
@@ -88,18 +88,25 @@ body {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  margin-top: 90px;
+  padding-top: 25px;
+  height: calc(100vh - 90px);
 }
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 30px 40px;
   border-bottom: 1px solid #eee;
   background-color: white;
-  width: 100%;
-  flex-shrink: 0;
-  height: 95px;
+  width: calc(100% - 270px);
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 100;
+  height: 90px;
+  box-sizing: border-box;
 }
 
 .auth-wrapper {
