--- a/GameTeam/wwwroot/css/questionnaires.css
+++ b/GameTeam/wwwroot/css/questionnaires.css
@@ -75,3 +75,8 @@ body {
     pointer-events: none;
 }
 
+.filled-button:disabled {
+    background-color: #E0E0E0;
+    cursor: not-allowed;
+    pointer-events: none;
+}
