--- a/GameTeam/wwwroot/css/header.css
+++ b/GameTeam/wwwroot/css/header.css
@@ -184,4 +184,15 @@ header {
         width: 100%;
         left: 0;
     }
+
+    .notifications-panel {
+        position: fixed;
+        top: 70px; /* чуть ниже шапки */
+        left: 10px;
+        right: 10px;
+        width: auto;
+        max-height: 70vh;
+        border-radius: 10px;
+        padding: 15px;
+    }
 }
