--- a/GameTeam/wwwroot/css/questionnaire-template.css
+++ b/GameTeam/wwwroot/css/questionnaire-template.css
@@ -8,7 +8,8 @@
     background-color: #EFF4FF;
     border-radius: 20px;
     padding: 20px;
-    width: 100%;
+    margin: 0 20px;
+    width: calc(100% - 40px);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
 }
