--- a/GameTeam/wwwroot/css/questionnaires.css
+++ b/GameTeam/wwwroot/css/questionnaires.css
@@ -76,7 +76,6 @@ body {
 }
 
 
-
 .login-prompt {
     font-size: 14px;
     color: #555;
@@ -128,7 +127,7 @@ body {
 
 
 .no-teams-message {
-    margin-top: 60px;
+    margin: 60px 20px 0 20px;
     font-size: 18px;
     color: #333;
     text-align: center;
@@ -140,3 +139,10 @@ body {
     color: #333;
     text-align: center;
 }
+
+@media (max-width: 768px) {
+    .content {
+        padding-bottom: 80px;
+    }
+}
+
