adaptability: profile, registration, infernal bugfixing

--- a/GameTeam/wwwroot/css/header.css
+++ b/GameTeam/wwwroot/css/header.css
@@ -33,6 +33,7 @@ header {
     margin-right: 10px;
     background-size: cover;
     background-position: center;
+    flex-shrink: 0;
 }
 
 .notification-wrapper {
